style.css
body {
    /*font family*/
    font-family: "Work Sans", sans-serif, system-ui;
    font-size: 16px;
    /*light purple background*/
    min-height: 100vh;
    background-color: hsl(275, 100%, 97%);
    /*dark purple banner image*/
    background-image: url("./assets/images/background-pattern-desktop.svg");
    background-repeat: no-repeat;
    background-position: top center;
    background-size: 100% auto;
}
.faq-container {
    background-color: white;
    width: 100%;
    max-width: 550px;
    padding: 2rem;
    border-radius: 1rem;
    box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);
}
.faq-header {
    display: flex;
    align-items: center;
    gap: 1.5rem;
}
.faq-header h1 {
    font-size: 3rem;
    font-weight: 700;
    color: hsl(292, 42%, 14%);
}

main {
    display: flex;
    justify-content: center;
    align-items: center;
    min-height: 100vh; /*so the main element knows where to vertically center*/
}

summary {
    display: flex;
    list-style: none;
    appearance: none;
    justify-content: space-between;
    align-items: center;
    font-weight: 600;
    color: hsl(292, 42%, 14%);
}
/*Makes plus icon appear as default for accordion*/
summary::after {
    content: "";
    background-image: url("./assets/images/icon-plus.svg");
    width: 30px;
    height: 30px;
    display: inline-block;
}
/*Makes minus icon appear as for accordion when opened*/
details[open] summary::after {
    background-image: url("./assets/images/icon-minus.svg");
}

/*Add gap between each question row*/
details {
    padding-block: 1rem;
    border-bottom: 1px solid #eee;
}
details:last-of-type {
    border-bottom: none;
}

p {
    color: hsl(292, 16%, 49%);
    line-height: 1.5;
}

